; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_threadstest.c_test_once.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_threadstest.c_test_once.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@once_run_thread_cb = common dso_local global i32 0, align 4
@once_run = common dso_local global i32 0, align 4
@once_do_run = common dso_local global i32 0, align 4
@once_run_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_once to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_once() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @once_run_thread_cb, align 4
  %4 = call i32 @run_thread(i32* %2, i32 %3)
  %5 = call i32 @TEST_true(i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %0
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @wait_for_thread(i32 %8)
  %10 = call i32 @TEST_true(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %7
  %13 = load i32, i32* @once_do_run, align 4
  %14 = call i32 @CRYPTO_THREAD_run_once(i32* @once_run, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load i32, i32* @once_run_count, align 4
  %18 = call i32 @TEST_int_eq(i32 %17, i32 1)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %16, %12, %7, %0
  store i32 0, i32* %1, align 4
  br label %22

21:                                               ; preds = %16
  store i32 1, i32* %1, align 4
  br label %22

22:                                               ; preds = %21, %20
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @TEST_true(i32) #1

declare dso_local i32 @run_thread(i32*, i32) #1

declare dso_local i32 @wait_for_thread(i32) #1

declare dso_local i32 @CRYPTO_THREAD_run_once(i32*, i32) #1

declare dso_local i32 @TEST_int_eq(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
